<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <name>${project.groupId}:${project.artifactId}</name>
  <description>A Spark extension to provide big exploratory analytics of spatio-temporal data</description>
  <url>http://bdlab.cs.ucr.edu/beast</url>

  <groupId>edu.ucr.cs.bdlab</groupId>
  <artifactId>beast</artifactId>
  <packaging>pom</packaging>
  <version>0.10.1-SNAPSHOT</version>

  <licenses>
    <license>
      <name>Apache License, Version 2.0</name>
      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <developers>
    <developer>
      <name>Ahmed Eldawy</name>
      <email>eldawy@ucr.edu</email>
      <organization>University of California, Riverside</organization>
      <organizationUrl>https://www.ucr.edu/</organizationUrl>
    </developer>
    <developer>
      <name>Majid Saeedan</name>
      <email>msaee007@ucr.edu </email>
      <organization>University of California, Riverside</organization>
      <organizationUrl>https://www.ucr.edu/</organizationUrl>
    </developer>
    <developer>
      <name>Tin Vu</name>
      <email>tvu032@ucr.edu</email>
      <organization>University of California, Riverside</organization>
      <organizationUrl>https://www.ucr.edu/</organizationUrl>
    </developer>
    <developer>
      <name>Saheli Ghosh</name>
      <email>sghos006@ucr.edu</email>
      <organization>University of California, Riverside</organization>
      <organizationUrl>https://www.ucr.edu/</organizationUrl>
    </developer>
    <developer>
      <name>Samriddhi Singla</name>
      <email>ssing068@ucr.edu</email>
      <organization>University of California, Riverside</organization>
      <organizationUrl>https://www.ucr.edu/</organizationUrl>
    </developer>
    <developer>
      <name>Yaming Zhang</name>
      <email>yzhan737@ucr.edu</email>
      <organization>University of California, Riverside</organization>
      <organizationUrl>https://www.ucr.edu/</organizationUrl>
    </developer>
  </developers>

  <scm>
    <connection>scm:git:https://eldawy@bitbucket.org/bdlabucr/beast.git</connection>
    <developerConnection>scm:git:git@bitbucket.org:bdlabucr/beast.git</developerConnection>
    <url>https://bitbucket.org/bdlabucr/beast/src/master/doc/</url>
    <tag>beast-${project.version}</tag>
  </scm>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
    <spark.version>3.4.2</spark.version>
    <spark.dependency>compile</spark.dependency>
    <maven.assembly.plugin.version>3.1.0</maven.assembly.plugin.version>
    <scala.version>2.12.17</scala.version>
    <scala.compat.version>2.12</scala.compat.version>
    <scala.maven.plugin.version>4.5.6</scala.maven.plugin.version>
    <jackson.version>2.14.2</jackson.version>
    <jts.version>1.18.2</jts.version>
    <geotools.version>26.1</geotools.version>
    <jetty.version>6.1.26</jetty.version>
    <calcite.version>1.34.0</calcite.version>
    <maven.compiler.arg> </maven.compiler.arg>
  </properties>

  <modules>
    <module>common</module>
    <module>commontest</module>
    <module>cg</module>
    <module>spatialtest</module>
    <module>io</module>
    <module>raptor</module>
    <module>visualization</module>
    <module>beast-spark</module>
    <module>satex</module>
    <module>dataExplorer</module>
    <module>distribution</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
      <dependency>
        <groupId>org.apache.spark</groupId>
        <artifactId>spark-sql_${scala.compat.version}</artifactId>
        <version>${spark.version}</version>
        <scope>${spark.dependency}</scope>
      </dependency>
      <dependency>
        <groupId>org.apache.spark</groupId>
        <artifactId>spark-core_${scala.compat.version}</artifactId>
        <version>${spark.version}</version>
        <scope>${spark.dependency}</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <distributionManagement>
    <snapshotRepository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
    </snapshotRepository>
    <repository>
      <id>ossrh</id>
      <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
    </repository>
  </distributionManagement>


  <build>
    <plugins>
      <!-- This plugin compiles Scala files -->
      <plugin>
        <groupId>net.alchim31.maven</groupId>
        <artifactId>scala-maven-plugin</artifactId>
        <version>${scala.maven.plugin.version}</version>
        <executions>
          <execution>
            <id>scala-compile-first</id>
            <phase>process-resources</phase>
            <goals>
              <goal>add-source</goal>
              <goal>compile</goal>
            </goals>
          </execution>
          <execution>
            <id>scala-test-compile</id>
            <phase>process-test-resources</phase>
            <goals>
              <goal>testCompile</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <version>2.18.1</version>
        <configuration>
          <useFile>false</useFile>
          <disableXmlReport>true</disableXmlReport>
          <!-- Make tests run with OpenJDK 9 or later -->
          <argLine>${maven.compiler.arg}</argLine>
          <!-- If you have classpath issue like NoDefClassError,... -->
          <!-- useManifestOnlyJar>false</useManifestOnlyJar -->
          <includes>
            <include>**/*Test.*</include>
            <include>**/*Suite.*</include>
          </includes>
        </configuration>
      </plugin>
    </plugins>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>3.3.0</version>
          <configuration>
            <descriptors>
              <descriptor>src/assembly/bin.xml</descriptor>
            </descriptors>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>

  <profiles>
    <profile>
      <id>release</id>
      <properties>
        <spark.dependency>provided</spark.dependency>
      </properties>

      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-surefire-plugin</artifactId>
            <version>2.18.1</version>
            <configuration>
              <systemPropertyVariables>
                <stressTest>true</stressTest>
              </systemPropertyVariables>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.sonatype.plugins</groupId>
            <artifactId>nexus-staging-maven-plugin</artifactId>
            <version>1.6.7</version>
            <extensions>true</extensions>
            <configuration>
              <serverId>ossrh</serverId>
              <nexusUrl>https://oss.sonatype.org/</nexusUrl>
              <autoReleaseAfterClose>true</autoReleaseAfterClose>
            </configuration>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-source-plugin</artifactId>
            <version>3.2.0</version>
            <executions>
              <execution>
                <id>attach-sources</id>
                <goals>
                  <goal>jar-no-fork</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <!-- Scala docs -->
            <!-- https://davidb.github.io/scala-maven-plugin/example_doc.html -->
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-site-plugin</artifactId>
            <version>3.0</version>
            <configuration>
              <reportPlugins>
                <plugin>
                  <artifactId>maven-project-info-reports-plugin</artifactId>
                  <version>2.2</version>
                </plugin>
                <plugin>
                  <groupId>net.alchim31.maven</groupId>
                  <artifactId>scala-maven-plugin</artifactId>
                  <version>${scala.maven.plugin.version}</version>
                </plugin>
              </reportPlugins>
            </configuration>
          </plugin>
          <!-- This plugin compiles Scala files -->
          <plugin>
            <groupId>net.alchim31.maven</groupId>
            <artifactId>scala-maven-plugin</artifactId>
            <version>${scala.maven.plugin.version}</version>
            <executions>
              <execution>
                <id>scala-compile-first</id>
                <phase>process-resources</phase>
                <goals>
                  <goal>add-source</goal>
                  <goal>compile</goal>
                </goals>
                <configuration>
                  <addScalacArgs>-Xdisable-assertions</addScalacArgs>
                </configuration>
              </execution>
              <execution>
                <id>scala-test-compile</id>
                <phase>process-test-resources</phase>
                <goals>
                  <goal>testCompile</goal>
                </goals>
              </execution>
              <execution>
                <id>attach-docs</id>
                <goals>
                  <goal>doc-jar</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-gpg-plugin</artifactId>
            <version>1.5</version>
            <executions>
              <execution>
                <id>sign-artifacts</id>
                <phase>verify</phase>
                <goals>
                  <goal>sign</goal>
                </goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      </build>
    </profile>
    <profile>
      <!-- Activate this profile when Java version is 9 or later -->
      <id>jdk9</id>
      <activation>
        <jdk>[9,)</jdk>
      </activation>
      <properties>
        <!-- Set compiler arg to use add-opens for Java 9+ -->
        <maven.compiler.arg>
          -XX:+IgnoreUnrecognizedVMOptions
          --add-opens=java.base/java.lang=ALL-UNNAMED
          --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
          --add-opens=java.base/java.lang.reflect=ALL-UNNAMED
          --add-opens=java.base/java.io=ALL-UNNAMED
          --add-opens=java.base/java.net=ALL-UNNAMED
          --add-opens=java.base/java.nio=ALL-UNNAMED
          --add-opens=java.base/java.util=ALL-UNNAMED
          --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
          --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
          --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
          --add-opens=java.base/sun.nio.cs=ALL-UNNAMED
          --add-opens=java.base/sun.security.action=ALL-UNNAMED
          --add-opens=java.base/sun.util.calendar=ALL-UNNAMED
          --add-opens=java.security.jgss/sun.security.krb5=ALL-UNNAMED
          -Djdk.reflect.useDirectMethodHandle=false
        </maven.compiler.arg>
      </properties>
    </profile>
  </profiles>
</project>
